# GildedRoseCpp

./: .gitignore  CMakeLists.txt  GildedRose.cc  GildedRose.h  GildedRoseUnitTests.cc  Makefile  README.md  run-once.sh
cmake_modules/: gtest-config.cmake
